test/invalid-syntax/stay/no-name.djs
classy Foo
    stay
    wow
wow
